# getfinanced

./: .gitignore  README.md  package-lock.json  package.json
contracts/get_financed/: Cargo.toml
contracts/get_financed/src/: admin.rs  lib.rs  test.rs  token.rs
contracts/get_financed/test_snapshots/test/: deposit_amount_zero_should_panic.1.json  test.1.json  test_approve_loan.1.json  test_approve_loan_bad_fee_rate.1.json  test_request_notWhitelisted.1.json
contracts/get_financed/token/: soroban_token_contract.wasm
contracts/lumen_finance/: Cargo.toml
contracts/lumen_finance/src/: lib.rs  test.rs
contracts/lumen_finance/test_snapshots/test/: swap_reserve_one_nonzero_other_zero.1.json  test.1.json  test_claim_loan.1.json  test_repay_loan.1.json  test_repay_loan_not_time_yet.1.json  test_request_loan.1.json  test_request_loan_not_whitelisted.1.json  test_withdraw.1.json  test_withdraw_with_fees_earned.1.json
